[package]
name = "tokio-timer-patched"
version = "0.1.3"
authors = [
  "Carl Lerche <me@carllerche.com>"
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/azuqua/tokio-timer"
homepage = "https://github.com/azuqua/tokio-timer"
documentation = "https://docs.rs/tokio-timer"
description = """
Timer facilities for Tokio, patched for handling issue #36, and pushed to Crates.io so that it can be used in other open source crates.
"""

[dependencies]
futures = "0.1"
slab = "0.3.0"
